src/tests/select/snapshots/ciboulette2postgres__tests__select__select_success__select_a_single_record.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    }
  }
]
