src/tests/select/snapshots/ciboulette2postgres__tests__select__select_success__select_all_fields.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    }
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": 34,
      "first-name": "Somebody",
      "gender": "F",
      "last-name": "Wuhu",
      "twitter": "@randomhandle"
    }
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "age": null,
      "first-name": "AAAAAAAA",
      "gender": null,
      "last-name": "BBBBBBBBB",
      "twitter": null
    }
  }
]
