src/tests/select/snapshots/ciboulette2postgres__tests__select__select_success__select_many_to_many_relationships.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles"
  },
  {
    "id": "[uuid]",
    "type": "articles"
  }
]
