src/tests/select/snapshots/ciboulette2postgres__tests__select__select_success__select_one_to_many_relationships.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "comments",
    "related_type": "peoples",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "comments",
    "related_type": "peoples",
    "related_id": "[uuid]"
  }
]
