src/tests/select/snapshots/ciboulette2postgres__tests__select__select_success__select_one_to_many_rels.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "comments",
    "data": {
      "body": "Wasnt convinced..."
    }
  },
  {
    "id": "[uuid]",
    "type": "comments",
    "data": {
      "body": "Vous savez, moi je ne crois pas qu\"il y ait de bonne ou de mauvaise situation. Moi, si je devais résumer ma vie aujourd\"hui avec vous, je dirais que c\"est d\"abord des rencontres. Des gens qui m\"ont tendu la main, peut-être à un moment où je ne pouvais pas, où j\"étais seul chez moi."
    }
  }
]
