src/tests/select/snapshots/ciboulette2postgres__tests__select__select_success__select_one_to_one_relationships.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "favorite_color"
  }
]
