src/tests/select/snapshots/ciboulette2postgres__tests__select__select_success__select_related_record_single_rels.snap
---
source: src/tests/select/select_success.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "favorite_color",
    "data": {
      "color": "red"
    },
    "related": null
  }
]
